Adding some p tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>My Demo Page</title>
     </head>
     <body>
-        This is a Sample Para
+        <p>This is a Sample Para</p>
+        <p>Hacoonah Matata!</p>
     </body>
 </html>
