Using small, strong and em tag inside paragraph tag

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>My Demo Page</title>
     </head>
     <body>
-        <p>This is a Sample Para</p>
-        <p>Hacoonah Matata!</p>
+        <p>This <small>is</small> a <strong> Para </strong></p>
+        <p>Hacoonah <em>Matata!</em></p>
     </body>
 </html>
