--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
     <body>
         <p>This <small>is</small> a <strong> Para </strong></p>
         <p>Hacoonah <em>Matata!</em></p>
+
+        <h1>This is the largest heading.</h1>
+        <h2>This is the second largest heading.</h1>
+        <h3>This is the third largest heading.</h1>
+        <h4>This is the fourth largest heading.</h1>
+        <h5>This is the fifth largest heading.</h1>
+        <h6>This is the sixth largest heading.</h1>
+
     </body>
 </html>
