Using ul and ol tags with li tag

--- a/index.html
+++ b/index.html
@@ -15,5 +15,17 @@
         <h5>This is the fifth largest heading.</h5>
         <h6>This is the sixth largest heading.</h6>
 
+        <ul>
+            <li>First</li>
+            <li>Second</li>
+            <li>Third</li>
+        </ul>
+
+        <ol>
+            <li>First</li>
+            <li>Second</li>
+            <li>Third</li>
+        </ol>
+
     </body>
 </html>
