Using div tags to section the code

--- a/index.html
+++ b/index.html
@@ -5,27 +5,36 @@
         <title>My Demo Page</title>
     </head>
     <body>
-        <p>This <small>is</small> a <strong> Para </strong></p>
-        <p>Hacoonah <em>Matata!</em></p>
+        
+        <div>
+            <p>This <small>is</small> a <strong> Para </strong></p>
+            <p>Hacoonah <em>Matata!</em></p>
+        </div>
 
-        <h1>This is the largest heading.</h1>
-        <h2>This is the second largest heading.</h2>
-        <h3>This is the third largest heading.</h3>
-        <h4>This is the fourth largest heading.</h4>
-        <h5>This is the fifth largest heading.</h5>
-        <h6>This is the sixth largest heading.</h6>
+        <div>
+            <h1>This is the largest heading.</h1>
+            <h2>This is the second largest heading.</h2>
+            <h3>This is the third largest heading.</h3>
+            <h4>This is the fourth largest heading.</h4>
+            <h5>This is the fifth largest heading.</h5>
+            <h6>This is the sixth largest heading.</h6>
+        </div>
 
-        <ul>
-            <li>First</li>
-            <li>Second</li>
-            <li>Third</li>
-        </ul>
 
-        <ol>
-            <li>First</li>
-            <li>Second</li>
-            <li>Third</li>
-        </ol>
+        <div>
+            <ul>
+                <li>First</li>
+                <li>Second</li>
+                <li>Third</li>
+            </ul>
+
+            <ol>
+                <li>First</li>
+                <li>Second</li>
+                <li>Third</li>
+            </ol>
+        </div>
+
 
     </body>
 </html>
