Using self closing tags, i.e br and hr tag

--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
         <title>My Demo Page</title>
     </head>
     <body>
-        
+
         <div>
-            <p>This <small>is</small> a <strong> Para </strong></p>
+            <p>This <small>is</small> <br> a <strong> Para </strong></p>
             <p>Hacoonah <em>Matata!</em></p>
         </div>
+
+        <hr>
 
         <div>
             <h1>This is the largest heading.</h1>
