Using img tag to add an image in the page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <h6>This is the sixth largest heading.</h6>
         </div>
 
+        <hr>
 
         <div>
             <ul>
@@ -37,6 +38,9 @@
             </ol>
         </div>
 
+        <hr>
+
+        <img src="https://mediaproxy.salon.com/width/1200/https://media.salon.com/2022/05/cats-party-0516221.jpg" alt="Cats" width="400px">
 
     </body>
 </html>
