Using anchor tag with href to add links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div>
             <p>This <small>is</small> <br> a <strong> Para </strong></p>
             <p>Hacoonah <em>Matata!</em></p>
+            <a href="https://www.google.com/" target="_blank">Click here to visit google</a>
         </div>
 
         <hr>
