Using anchor tag with href to visit other html pages

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
         <div>
             <p>This <small>is</small> <br> a <strong> Para </strong></p>
             <p>Hacoonah <em>Matata!</em></p>
-            <a href="https://www.google.com/" target="_blank">Click here to visit google</a>
+            <a href="https://www.google.com/" target="_blank">Click here to visit google.</a><br>
+            <a href="about.html">Click here to visit about us page.</a>
         </div>
 
         <hr>
