Adding style attribute on a para tag and using blockquote tage

--- a/index.html
+++ b/index.html
@@ -44,5 +44,13 @@
 
         <img src="https://mediaproxy.salon.com/width/1200/https://media.salon.com/2022/05/cats-party-0516221.jpg" alt="Cats" width="400px">
 
+        <hr>
+
+        <blockquote cite="Gadi ka mirror">
+            Objects in the mirror ar closes than they appear.
+        </blockquote>
+
+        <p style="color: orange;">This is a para in orange color</p>
+
     </body>
 </html>
