Using label with for in form

--- a/forms.html
+++ b/forms.html
@@ -8,6 +8,7 @@
 <body>
     <h1>HTML Forms</h1>
     <form>
+        <label for="username">Enter Username</label>
         <input type="text" id="username">
     </form>
 </body>
