--- a/forms.html
+++ b/forms.html
@@ -10,6 +10,9 @@
     <form>
         <label for="username">Enter Username</label>
         <input type="text" id="username">
+        <br><br>
+        <label for="email">Enter Email</label>
+        <input type="email" id="email">
     </form>
 </body>
 </html>
