Adding an password field

--- a/forms.html
+++ b/forms.html
@@ -13,6 +13,11 @@
         <br><br>
         <label for="email">Enter Email</label>
         <input type="email" id="email">
+        <br><br>
+
+        <label for="pass">Enter Password</label>
+        <input type="password" id="pass">
+
     </form>
 </body>
 </html>
