--- a/forms.html
+++ b/forms.html
@@ -9,14 +9,22 @@
     <h1>HTML Forms</h1>
     <form>
         <label for="username">Enter Username</label>
-        <input type="text" id="username">
+        <input type="text" id="username" name="username">
         <br><br>
         <label for="email">Enter Email</label>
-        <input type="email" id="email">
+        <input type="email" id="email" name="email">
         <br><br>
 
         <label for="pass">Enter Password</label>
-        <input type="password" id="pass">
+        <input type="password" id="pass" name="password">
+
+        <p>Select your age:</p>
+        <input type="radio" name="age" value="0-25" id="option-1">
+        <label for="option-1">0-25</label>
+        <input type="radio" name="age" value="26-50" id="option-2">
+        <label for="option-2">26-50</label>
+        <input type="radio" name="age" value="51+" id="option-3">
+        <label for="option-3">51+</label>
 
     </form>
 </body>
