Adding text area tag

--- a/forms.html
+++ b/forms.html
@@ -35,7 +35,15 @@
             <option value="q3">What you like to eat the most?</option>
         </select>
 
-        <br><br><br>
+        <br><br>
+
+        <label for="answer">Security Question Answer: </label>
+        <input type="text" id="answer" name="answer">
+
+        <br><br>
+
+        <label for="bio">Enter you bio</label> <br>
+        <textarea name="bio" id="bio" cols="60" rows="10"></textarea>
 
     </form>
 </body>
