Adding a submit button

--- a/forms.html
+++ b/forms.html
@@ -43,7 +43,10 @@
         <br><br>
 
         <label for="bio">Enter you bio</label> <br>
-        <textarea name="bio" id="bio" cols="60" rows="10"></textarea>
+        <textarea name="bio" id="bio" cols="60" rows="10" placeholder="about you..."></textarea>
+
+        <br><br>
+        <input type="submit" value="submit the form">
 
     </form>
 </body>
