--- a/forms.html
+++ b/forms.html
@@ -9,7 +9,7 @@
     <h1>HTML Forms</h1>
     <form>
         <label for="username">Enter Username</label>
-        <input type="text" id="username" name="username">
+        <input type="text" id="username" name="username" required>
         <br><br>
         <label for="email">Enter Email</label>
         <input type="email" id="email" name="email">
