--- a/survey_form.html
+++ b/survey_form.html
@@ -11,10 +11,41 @@
 
     <form>
 
-        <label for="username">Enter you name: </label> <br><br>
+        <h4><label for="username">Enter you name: </label></h4>
         <input type="text" name="first_name" id="first_name" placeholder="First Name">
         <input type="text" name="last_name" id="last_name" placeholder="Last Name">
 
+        <br><br>
+
+        <h4><label for="age">Enter you age: </label></h4>
+        <input type="number" name="age" id="age" placeholder="Your Age">
+
+        <br><br>
+
+        <h4>Select your gender:</h4>
+        <input type="radio" name="gender" value="Male" id="male">
+        <label for="male">Male</label>
+
+        <input type="radio" name="gender" value="Female" id="female">
+        <label for="female">Female</label>
+
+        <input type="radio" name="gender" value="Other" id="other">
+        <label for="other">Other</label>
+        
+        <br><br>
+
+        <h4>Address</h4>
+        <label for="street_address_1">Street Address: </label>
+        <input type="text" name="street_address_1" id="street_address_1"> <br><br>
+
+        <label for="street_address_2">Street Address 2: </label> 
+        <input type="text" name="street_address_2" id="street_address_2"> <br><br>
+
+        <label for="city">City: </label>
+        <input type="text" name="city" id="city"> <br><br>
+
+        <label for="state">State: </label>
+        <input type="text" name="state" id="state">
 
     </form>
     
