Adding a background to the body

--- a/survey_form.html
+++ b/survey_form.html
@@ -5,20 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Survey Form</title>
 </head>
-<body>
-    <h1>Survey Form</h1>
-    <hr>
+<body background="bg.jpg">
+    <h1 style="border: 2px solid black; padding: 16px; text-align: center;">Survey Form</h1>
 
     <form>
 
         <h2><label for="username">Enter you name : </label></h2>
-        <input type="text" name="first_name" id="first_name" placeholder="First Name">
-        <input type="text" name="last_name" id="last_name" placeholder="Last Name">
+        <input type="text" name="first_name" id="first_name" placeholder="First Name" required>
+        <input type="text" name="last_name" id="last_name" placeholder="Last Name" required>
 
         <br><br>
 
         <h2><label for="age">Enter you age : </label></h2>
-        <input type="number" name="age" id="age" placeholder="Your Age">
+        <input type="number" name="age" id="age" placeholder="Your Age" required>
 
         <br><br>
 
