--- a/css_index.html
+++ b/css_index.html
@@ -4,11 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS Basics</title>
-    <style>
-        h1 {
-            color: cadetblue;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -21,6 +17,15 @@
          Quisque accumsan, lectus sit amet mollis scelerisque, arcu urna fermentum leo, non sodales lectus 
          metus ut ipsum. Pellentesque varius lectus nec scelerisque tristique. Aenean mattis lacinia augue, 
          non rhoncus odio pulvinar nec. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+
+    <div>
+
+        <h2>This is a heading.</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis sagittis dolor, 
+            sed lobortis velit. Integer pulvinar suscipit dolor, at dignissim ex laoreet vel.
+             Aliquam mollis id dolor non elementum. Nunc convallis massa viverra ornare sagittis. </p>
+
+    </div>
     
 </body>
 </html>
