Making span a block element using display attribute in css

--- a/css_index.html
+++ b/css_index.html
@@ -26,6 +26,11 @@
              Aliquam mollis id dolor non elementum. Nunc convallis massa viverra ornare sagittis. </p>
 
     </div>
+
+    <br><br>
+
+    <span>This is span</span>
+    <em>This is em</em>
     
 </body>
 </html>
