--- a/css_index.html
+++ b/css_index.html
@@ -26,13 +26,23 @@
         metus ut ipsum. Pellentesque varius lectus nec scelerisque tristique. Aenean mattis lacinia augue, 
         non rhoncus odio pulvinar nec. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis sagittis dolor, 
+    <p class="success">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis sagittis dolor, 
     sed lobortis velit. Integer pulvinar suscipit dolor, at dignissim ex laoreet vel.
         Aliquam mollis id dolor non elementum. Nunc convallis massa viverra ornare sagittis. 
         Aliquam quis sem sem. Nunc volutpat neque eu nisi vulputate facilisis. Integer non libero dolor. 
         Quisque accumsan, lectus sit amet mollis scelerisque, arcu urna fermentum leo, non sodales lectus 
         metus ut ipsum. Pellentesque varius lectus nec scelerisque tristique. Aenean mattis lacinia augue, 
         non rhoncus odio pulvinar nec. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+
+    <p class="success feedback">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis sagittis dolor, 
+        sed lobortis velit. Integer pulvinar suscipit dolor, at dignissim ex laoreet vel.
+            Aliquam mollis id dolor non elementum. Nunc convallis massa viverra ornare sagittis. 
+            Aliquam quis sem sem. Nunc volutpat neque eu nisi vulputate facilisis. Integer non libero dolor. 
+            Quisque accumsan, lectus sit amet mollis scelerisque, arcu urna fermentum leo, non sodales lectus 
+            metus ut ipsum. Pellentesque varius lectus nec scelerisque tristique. Aenean mattis lacinia augue, 
+            non rhoncus odio pulvinar nec. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+
+    <div class="error">I am Neo</div>
     
 </body>
 </html>
