Demonstrating use of child selectors in css

--- a/css_index.html
+++ b/css_index.html
@@ -45,6 +45,9 @@
                 non rhoncus odio pulvinar nec. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
     
     </div>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi fugiat quis, doloremque sint nobis sit suscipit quos. Atque reiciendis ipsa eum, omnis, corporis labore repellendus unde temporibus quae, perferendis nam?</p>
+
     
 </body>
 </html>
