Demonstrating use of attribute selectors in css

--- a/css_index.html
+++ b/css_index.html
@@ -48,6 +48,9 @@
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi fugiat quis, doloremque sint nobis sit suscipit quos. Atque reiciendis ipsa eum, omnis, corporis labore repellendus unde temporibus quae, perferendis nam?</p>
 
+    <a href="https://www.google.co.in">Visit Google Search Page</a>
+    <a href="http://satyamthakur.com" target="_blank">Visit My Portfolio Page</a>
+
     
 </body>
 </html>
