--- a/html5_semantics/index.html
+++ b/html5_semantics/index.html
@@ -7,6 +7,30 @@
     <title>Marioclub</title>
 </head>
 <body>
+
+    <header>
+        <h1>Marioclub</h1>
+    </header>
+    
+    <section class="banner">
+        <img src="img/banner.png" alt="welcome banner">
+        <div class="welcome">
+            <h2>Welcom to <br><span>Marioclub</span></h2>
+        </div>
+    </section>
+
+    <nav class="main-nav">
+        <ul>
+            <li><a href="/join.html">Join the club</a></li>
+            <li><a href="/news.html">Latest news</a></li>
+            <li><a href="/games.html">New games</a></li>
+            <li><a href="/contact.html">contact</a></li>
+        </ul>
+    </nav>
+
+
+
+
     
 </body>
 </html>
