Adding the main content of the web page

--- a/html5_semantics/index.html
+++ b/html5_semantics/index.html
@@ -15,7 +15,7 @@
     <section class="banner">
         <img src="img/banner.png" alt="welcome banner">
         <div class="welcome">
-            <h2>Welcom to <br><span>Marioclub</span></h2>
+            <h2>Welcome to <br><span>Marioclub</span></h2>
         </div>
     </section>
 
@@ -24,11 +24,21 @@
             <li><a href="/join.html">Join the club</a></li>
             <li><a href="/news.html">Latest news</a></li>
             <li><a href="/games.html">New games</a></li>
-            <li><a href="/contact.html">contact</a></li>
+            <li><a href="/contact.html">Contact</a></li>
         </ul>
     </nav>
 
+    <main>
+        <article>
+            <h2>It's a me, Mario</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempore eos itaque quas consectetur accusantium quod ex blanditiis qui, vel, numquam quibusdam aut optio sint ratione voluptate nostrum unde perferendis animi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur sed nesciunt corrupti ad, ullam voluptas repellat eligendi ex doloremque placeat recusandae adipisci corporis illo cupiditate? At ut illum eaque quia? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos dolor nobis neque maiores recusandae tenetur, obcaecati saepe quae aspernatur fuga ipsam magni deserunt explicabo unde commodi assumenda asperiores ut laudantium.</p>
+        </article>
 
+        <ul class="images">
+            <li><img src="img/thumb-1.png" alt="mario thumb 1"></li>
+            <li><img src="img/thumb-2.png" alt="mario thumb 2"></li>
+        </ul>
+    </main>
 
 
     
