Adding join form section and copyright in the footer

--- a/html5_semantics/index.html
+++ b/html5_semantics/index.html
@@ -40,7 +40,17 @@
         </ul>
     </main>
 
+    <section class="join">
+        <h2>Join Today!</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus necessitatibus, doloremque deserunt praesentium molestias, incidunt cupiditate voluptas possimus alias nisi est tempore quisquam. Minima fuga accusantium nam soluta necessitatibus quis.</p>
+        <form>
+            <input type="email" name="email" placeholder="Enter your email & hit enter" required>
+        </form>
+    </section>
 
+    <footer>
+        <p class="copyright">Copyright 2023 Satyam Thakur</p>
+    </footer>
     
 </body>
 </html>
