--- a/html5_semantics/index.html
+++ b/html5_semantics/index.html
@@ -42,7 +42,7 @@
 
     <section class="join">
         <h2>Join Today!</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus necessitatibus, doloremque deserunt praesentium molestias, incidunt cupiditate voluptas possimus alias nisi est tempore quisquam. Minima fuga accusantium nam soluta necessitatibus quis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus necessitatibus, doloremque deserunt praesentium.</p>
         <form>
             <input type="email" name="email" placeholder="Enter your email & hit enter" required>
         </form>
