--- a/css_learning/index.html
+++ b/css_learning/index.html
@@ -16,7 +16,7 @@
             display: flex;
             flex-direction: row;
             background-color: aliceblue;
-            height: 400px;
+            height: 800px;
             padding: 0 0;
         }
 
@@ -38,10 +38,43 @@
             align-items: center;
         }
 
+        div img {
+            float: left;
+        }
+
+        .header {
+            background-color: aquamarine; /* Background color of the header */
+            padding: 20px; /* Padding around the header content */
+            display: flex; /* Use flexbox for layout */
+            align-items: center; /* Vertically center items */
+        }
+
+        .logo {
+            width: 50px; /* Adjust the width of the logo */
+            height: 50px; /* Adjust the height of the logo */
+            margin-right: 10px; /* Margin between logo and title */
+        }
+
+        .title {
+            font-size: 24px;
+            font-weight: bold;
+            flex-grow: 1;
+        }
+
+        .footer {
+            position: fixed;
+            bottom: 0px;
+            width: 1479px;
+            background-color: beige;
+        }
+
     </style>
 </head>
 <body>
-    <div class="header"><h1>Header</h1></div>
+    <div class="header">
+        <img src="quotify_icon.png" alt="Logo" class="logo">
+        <div class="title">Website Title</div>
+    </div>
     <div class="nav"><h1>Navigation</h1></div>
     <div class="center">
         <div class="left"><h1>Left</h1></div>
