--- a/css_flex_box/index.html
+++ b/css_flex_box/index.html
@@ -7,6 +7,11 @@
     <title>CSS Flex Box Demo</title>
 </head>
 <body>
-    
+    <div class="flex-container">
+        <div class="flex-item">1</div>
+        <div class="flex-item">2</div>
+        <div class="flex-item">3</div>
+        <div class="flex-item">4</div>
+    </div>
 </body>
 </html>
