Using an external js file to alert

--- a/javascript_basics/index.html
+++ b/javascript_basics/index.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
-        alert("Hello, world");
-    </script>
+    <h1>JavaScript Demo</h1>
+    <script src="main.js"></script>
 </body>
 </html>
