Alert Dialog Example

--- a/javascript_basics/index.html
+++ b/javascript_basics/index.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+        function abc() {
+            window.alert("Welcome to LPU");
+            document.write("HTML Alert Dialog Box Example")
+        }
+    </script>
 </head>
 <body>
     <h1>JavaScript Demo</h1>
-    <script src="main.js"></script>
+    <input type="submit" onclick="abc()">
 </body>
 </html>
