--- a/javascript_basics/index.html
+++ b/javascript_basics/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script>
-        function abc() {
-            window.alert("Welcome to LPU");
-            document.write("HTML Alert Dialog Box Example")
-        }
-    </script>
+    <script src="loops.js"></script>
 </head>
 <body>
-    <h1>JavaScript Demo</h1>
-    <input type="submit" onclick="abc()">
+    <h1>JavaScript Loops Demo</h1>
+    <a href="#">Link 0</a>
+    <a href="#">Link 1</a>
+    <a href="#">Link 2</a>
+    <a href="#">Link 3</a>
+    <a href="#">Link 4</a>
+    <a href="#">Link 5</a>
 </body>
 </html>
