Showcasing the use of heading tags in bootstrap

--- a/bootstrap/colours_typography.html
+++ b/bootstrap/colours_typography.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Heading Tags -->
+    <h1>Bootstrap 5 h1 tag</h1>
+    <h2>This is h2 tag</h2>
+    <h3>This is h3 tag</h3>
+    <h2 class="h3">This is h2 with h3 class</h2>
 </body>
 </html>
