Showing the use of display classes

--- a/bootstrap/colours_typography.html
+++ b/bootstrap/colours_typography.html
@@ -12,5 +12,13 @@
     <h2>This is h2 tag</h2>
     <h3>This is h3 tag</h3>
     <h2 class="h3">This is h2 with h3 class</h2>
+    
+    <br>
+
+    <!-- Display headings -->
+    <h1 class="display-1">Display 1 Heading</h1>
+    <h1 class="display-3">Display 3 Heading</h1>
+    <h1 class="display-6">Display 6 Heading</h1>
+
 </body>
 </html>
