--- a/bootstrap/buttons_groups.html
+++ b/bootstrap/buttons_groups.html
@@ -6,7 +6,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <title>Buttons in BootStrap</title>
 </head>
-<body>
-    
+<body style="padding: 24px;">
+    <!-- Basic Buttons -->
+    <h2>Buttons</h2>
+    <button class="btn btn-primary">Primary Button</button>
+    <button class="btn btn-secondary">Secondary Button</button>
+
 </body>
 </html>
