Showing anchor tags as buttons

--- a/bootstrap/buttons_groups.html
+++ b/bootstrap/buttons_groups.html
@@ -12,5 +12,11 @@
     <button class="btn btn-primary">Primary Button</button>
     <button class="btn btn-secondary">Secondary Button</button>
 
+    <br><br><br>
+    <!-- Anchor tags as buttons -->
+    <h2>Links as Buttons</h2>
+    <a href="" class="btn btn-info">Info Button</a>
+    <a href="" class="btn btn-success">Success Button</a>
+
 </body>
 </html>
