Showing different button sizes

--- a/bootstrap/buttons_groups.html
+++ b/bootstrap/buttons_groups.html
@@ -18,5 +18,11 @@
     <a href="" class="btn btn-info">Info Button</a>
     <a href="" class="btn btn-success">Success Button</a>
 
+    <br><br><br>
+    <!-- Sizes in buttons -->
+    <h2>Different sizes in Buttons</h2>
+    <button class="btn btn-lg btn-danger">Large Danger Button</button>
+    <button class="btn btn-sm btn-warning">Small Warning Button</button>
+
 </body>
 </html>
