Showing outlined buttons

--- a/bootstrap/buttons_groups.html
+++ b/bootstrap/buttons_groups.html
@@ -24,5 +24,11 @@
     <button class="btn btn-lg btn-danger">Large Danger Button</button>
     <button class="btn btn-sm btn-warning">Small Warning Button</button>
 
+    <br><br><br>
+    <!-- Outlined buttons -->
+    <h2>Outlined Buttons</h2>
+    <button class="btn btn-outline-primary">Outline Button</button>
+    <button class="btn btn-outline-success ">Success Outline Button</button>
+
 </body>
 </html>
