Showing button groups

--- a/bootstrap/buttons_groups.html
+++ b/bootstrap/buttons_groups.html
@@ -30,5 +30,15 @@
     <button class="btn btn-outline-primary">Outline Button</button>
     <button class="btn btn-outline-success ">Success Outline Button</button>
 
+    <br><br><br>
+    <!-- Button groups -->
+    <h2>Button Groups</h2>
+    <div class="btn-group">
+        <a href="" class="btn btn-primary">One</a>
+        <a href="" class="btn btn-success">Two</a>
+        <a href="" class="btn btn-warning">Three</a>
+        <a href="" class="btn btn-danger">Four</a>
+    </div>
+
 </body>
 </html>
