Using css and html method on selecting p tag

--- a/jquery/hello.html
+++ b/jquery/hello.html
@@ -7,7 +7,7 @@
   <script>
     $(document).ready(function(){
         $("button").click(function(){
-            $("p").hide();
+            $("p").html("Hello There").css("color", "red");
         });
     });
   </script>
