Adding border on button click

--- a/jquery/hello.html
+++ b/jquery/hello.html
@@ -7,14 +7,18 @@
   <script>
     $(document).ready(function(){
         $("button").click(function(){
-            $("p").html("Hello There").css("color", "red");
+            // $("p").html("Hello There").css("color", "red");
+            $("*").css("border", "2px solid red")
         });
     });
+
+    
   </script>
     <title>Document</title>
 </head>
 <body>
-    <p>This is a paragraph</p>
+    <h1>This is a Heading!</h1>
+    <p>This is a paragraph.</p>
     <button>Click Here</button>
 </body>
 </html>
