Creating a new file for utility classes in BootStrap

--- a/jquery/hello.html
+++ b/jquery/hello.html
@@ -7,8 +7,7 @@
   <script>
     $(document).ready(function(){
         $("button").click(function(){
-            // $("p").html("Hello There").css("color", "red");
-            $("*").css("border", "2px solid red")
+            $("p").fadeOut(1500)
         });
     });
 
