Showing margin and padding utility classes

--- a/bootstrap/utility_classes.html
+++ b/bootstrap/utility_classes.html
@@ -7,8 +7,11 @@
     <title>Utility Classes</title>
 </head>
 <body>
-    
-    
+    <!-- Margin and Padding -->
+    <div class="bg-primary m-3 p-3 text-white">
+        Small Margin and Padding
+    </div>
+
 
 </body>
 </html>
