Adding padding and margin in x and y direction

--- a/bootstrap/utility_classes.html
+++ b/bootstrap/utility_classes.html
@@ -12,6 +12,14 @@
         Small Margin and Padding
     </div>
 
+    <div class="bg-primary m-5 p-5 text-white">
+        Large Margin and Padding
+    </div>
+
+    <div class="bg-primary mx-2 px-2 py-1 text-white">
+        Large Margin and Padding
+    </div>
+
 
 </body>
 </html>
