Showing border utility classes

--- a/bootstrap/utility_classes.html
+++ b/bootstrap/utility_classes.html
@@ -20,6 +20,11 @@
         Large Margin and Padding
     </div>
 
+    <!-- Borders -->
+    <div class="m-3 p-3 border border-success border-3">
+        Default Border
+    </div>
+
 
 </body>
 </html>
