Adding mouse events in jQuery

--- a/bootstrap/utility_classes.html
+++ b/bootstrap/utility_classes.html
@@ -25,6 +25,14 @@
         Default Border
     </div>
 
+    <div class="m-3 p-3 border border-success border-3 rounded">
+        Rounded Border
+    </div>
+
+    <div class="m-3 p-3 border border-success border-3 rounded-pill">
+        Pill Border
+    </div>
+
 
 </body>
 </html>
