Adding dblclick, mouseenter and mouseleave events

--- a/jquery/mouse_events.html
+++ b/jquery/mouse_events.html
@@ -10,6 +10,18 @@
             $('button').click(function(){
                 $('h1').html("You Clicked the Button!")
             })
+
+            $('button').dblclick(function(){
+                $('h1').html("You Double Clicked the Button!")
+            })
+
+            $('button').mouseenter(function(){
+                $('h1').html("Mouse Entered!")
+            })    
+            
+            $('button').mouseleave(function(){
+                $('h1').html("Mouse Left!")
+            })
         })
     </script>
 </head>
