Adding fluid container and container-lg

--- a/bootstrap/containers.html
+++ b/bootstrap/containers.html
@@ -11,5 +11,15 @@
         <h2>Normal Container</h2>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut, in iste repudiandae possimus illo repellat consequuntur, modi quod necessitatibus debitis hic ab, accusamus ratione cupiditate fugiat! Atque alias quasi accusamus.</p>
     </div>
+
+    <div class="container-fluid">
+        <h2>Fluid Container</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum vitae error similique asperiores adipisci natus in exercitationem mollitia delectus laborum? Debitis reiciendis fugiat eligendi, quidem repellat unde odit? Harum, animi!</p>
+    </div>
+
+    <div class="container-lg my-5">
+        <h2>Fluid Container</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Illum vitae error similique asperiores adipisci natus in exercitationem mollitia delectus laborum? Debitis reiciendis fugiat eligendi, quidem repellat unde odit? Harum, animi!</p>
+    </div>
 </body>
 </html>
