--- a/bootstrap/grid_layout.html
+++ b/bootstrap/grid_layout.html
@@ -10,13 +10,13 @@
     <div class="container-lg my-5">
         <h2>Basic Grid</h2>
         <div class="row">
-            <div class="col">
+            <div class="col-2">
                 <div class="p-5 bg-primary text-white">Col 1</div>
             </div>
-            <div class="col">
+            <div class="col-8">
                 <div class="p-5 bg-primary text-white">Col 2</div>
             </div>
-            <div class="col">
+            <div class="col-2">
                 <div class="p-5 bg-primary text-white">Col 3</div>
             </div>
         </div>
