--- a/bootstrap/grid_layout.html
+++ b/bootstrap/grid_layout.html
@@ -21,5 +21,21 @@
             </div>
         </div>
     </div>
+
+    <div class="container-lg my-5">
+        <h2>Responsive Grid</h2>
+        <div class="row">
+            <div class="col-sm-4 col-lg-6">
+                <div class="p-5 bg-primary text-white">Col 1</div>
+            </div>
+            <div class="col-sm-4 col-lg-4">
+                <div class="p-5 bg-primary text-white">Col 2</div>
+            </div>
+            <div class="col-sm-4 col-lg-2">
+                <div class="p-5 bg-primary text-white">Col 3</div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
